# EuroleagueQuiz

./: .gitignore  CONTEXT.md  README.md  alembic.ini  pyproject.toml  query_ff_final.py  query_ff_final_v2.py  query_players.py  start-backend.bat  start-frontend.bat
app/: config.py  main.py
backend/: .dockerignore  alembic_auth.ini  pyproject.toml  query_lee.py  query_teams.py  startup.sh
backend/alembic/: env.py
backend/alembic_auth/: env.py
backend/app/: auth_database.py  config.py  database.py  game_actions.py  main.py
backend/benchmarks/: tictactoe_latency.py
backend/ingestion/: aggregate_stats.py  all_euroleague.py  all_euroleague_overrides.json  champions.py  fetch_rosters.py  fetch_seasons.py  ingest.py  player_awards.py  utils.py  wikidata_careers.py  wikipedia_careers.py  wikipedia_images.py  wikipedia_overrides.json
backend/tests/: realtime_helpers.py  test_all_euroleague_data.py  test_all_euroleague_ingestion.py  test_api.py  test_auth_user_model.py  test_career_quiz.py  test_champion_enrichment.py  test_champion_roster_data.py  test_clerk_auth.py  test_clerk_webhooks.py  test_game_action_orchestration.py  test_game_actions.py  test_guess_the_list_api.py  test_higher_lower.py  test_matchmaking.py  test_online_identity.py  test_photo_quiz.py  test_player_awards_data.py  test_player_awards_ingestion.py  test_race_rounds.py  test_realtime_module.py  test_roster_guess_api.py  test_solo_round_token.py  test_tictactoe_api.py  test_tictactoe_stat_milestones.py  test_timing.py  test_wikidata_careers.py  test_wikipedia_careers.py  test_wikipedia_images.py
(+260 files in other folders)
