[project]
name = "euroleague-quiz"
version = "0.1.0"
description = "EuroLeague Basketball Quiz & Knowledge Games — Data Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "euroleague-api>=0.0.21",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
ingest = "ingestion.ingest:main"

[tool.setuptools.packages.find]
include = ["app*", "ingestion*"]
